# durabletask-python

./: .flake8  .gitignore  .pymarkdown.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  dev-requirements.txt  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/agents/: daily-code-review.agent.md  elementary-pr-teacher.agent.md  issue-triage.agent.md  pr-verification.agent.md
.github/releases/: azuremanaged-v1.4.0.md  v1.4.0.md
.github/workflows/: codeql.yml  daily-code-review.yaml  durabletask-azurefunctions-dev.yml  durabletask-azurefunctions-experimental.yml  durabletask-azurefunctions.yml  durabletask-azuremanaged-dev.yml  durabletask-azuremanaged-experimental.yml  durabletask-azuremanaged.yml  durabletask-dev.yml  durabletask-experiment.yml  durabletask.yml  pr-validation.yml  pr-verification.yaml  publish-dts-sdk.yml  typecheck.yml
azure-functions-durable/: pyproject.toml  pyrightconfig.json
docs/: development.md  entities.md  features.md  getting-started.md  large-payload-feature-comparison.md  large-payload-implementation-proposals.md  plan-orchestrationHistoryExport.prompt.md  supported-patterns.md
durabletask/: __init__.py  accessTokenManager.py  client.py  grpc_options.py  history.py  serialization.py  task.py  worker.py
durabletask-azurefunctions/: CHANGELOG.md  pyproject.toml
durabletask-azurefunctions/durabletask/azurefunctions/: __init__.py  client.py  constants.py  worker.py
durabletask-azurefunctions/durabletask/azurefunctions/decorators/: __init__.py  durable_app.py  metadata.py
durabletask-azurefunctions/durabletask/azurefunctions/http/: __init__.py  http_management_payload.py
durabletask-azurefunctions/durabletask/azurefunctions/internal/: DurableClientConverter.py  __init__.py  azurefunctions_grpc_interceptor.py  azurefunctions_null_stub.py  functions_json.py
durabletask-azuremanaged/: CHANGELOG.md  pyproject.toml
durabletask-azuremanaged/durabletask/azuremanaged/: access_token_manager.py  client.py  durabletask_grpc_interceptor.py  durabletask_keep_alive_service.py  durabletask_scheduler_client.py  durabletask_scheduler_worker.py  worker.py
durabletask-azuremanaged/durabletask/azuremanaged/extensions/: __init__.py
durabletask-azuremanaged/durabletask/azuremanaged/extensions/serverless/: __init__.py  client.py  worker.py
durabletask-azuremanaged/durabletask/azuremanaged/internal/: SANDBOX_PROTO_SOURCE_COMMIT_HASH  SERVERLESS_PROTO_SOURCE_COMMIT_HASH  access_token_manager.py  durabletask_grpc_interceptor.py  on_demand_sandbox_activities_service_pb2.py  on_demand_sandbox_activities_service_pb2_grpc.py  sandbox_service_pb2.py  sandbox_service_pb2.pyi  sandbox_service_pb2_grpc.py  serverless_activities_service.proto  serverless_activities_service_pb2.py  serverless_activities_service_pb2.pyi  serverless_activities_service_pb2_grpc.py
durabletask-azuremanaged/durabletask/azuremanaged/preview/: __init__.py
durabletask-azuremanaged/durabletask/azuremanaged/preview/on_demand_sandbox/: __init__.py  _normalization.py  client.py  declarations.py  helpers.py  transport.py  worker.py
durabletask-azuremanaged/durabletask/azuremanaged/preview/ondemand_sandbox/: __init__.py  client.py  worker.py
durabletask-azuremanaged/durabletask/azuremanaged/preview/sandboxes/: __init__.py  client.py  declarations.py  helpers.py  profile_builder.py  transport.py  worker.py  worker_messages.py  worker_profiles.py
durabletask/aio/: __init__.py  client.py
durabletask/api/: state.py  task_hub_client.py
durabletask/entities/: __init__.py  durable_entity.py  entity_context.py  entity_instance_id.py  entity_lock.py  entity_metadata.py  entity_operation_failed_exception.py
durabletask/extensions/: __init__.py
durabletask/internal/: PROTO_SOURCE_COMMIT_HASH  ProtoTaskHubSidecarServiceStub.py  client_helpers.py  entity_lock_releaser.py  entity_state_shim.py  exceptions.py  grpc_interceptor.py  grpc_resiliency.py  helpers.py  history_helpers.py  json_codec.py  json_encode_output_exception.py  orchestration_entity_context.py  orchestrator_service_pb2.py  orchestrator_service_pb2.pyi  orchestrator_service_pb2_grpc.py  proto_task_hub_sidecar_service_stub.py  shared.py  tracing.py  type_discovery.py
durabletask/payload/: __init__.py  (+2 more)
examples/: README.md  activity_sequence.py  class_based_entities.py  dts_activity_sequence.py  durable_entities.py  entity_locking_example.py  fanout_fanin.py  human_interaction.py  in_memory_backend_example.py  scheduled_tasks.py  version_aware_orchestrator.py  work_item_filtering.py
tests/: test_activity_executor.py  test_client.py  test_orchestration_e2e.py  test_orchestration_executor.py
(+197 files in other folders)
