# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

# For more information on pyproject.toml, see https://peps.python.org/pep-0621/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "durabletask.azurefunctions"
version = "0.0.1dev0"
description = "Durable Task Python SDK provider implementation for Durable Azure Functions"
keywords = [
    "durable",
    "task",
    "workflow",
    "azure",
    "azure functions"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "durabletask>=0.5.0",
    "azure-identity>=1.19.0",
    "azure-functions>=1.11.0"
]

[project.urls]
repository = "https://github.com/microsoft/durabletask-python"
changelog = "https://github.com/microsoft/durabletask-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["durabletask.azurefunctions", "durabletask.azurefunctions.*"]

[tool.pytest.ini_options]
minversion = "6.0"
